Tried to fix awkward position on mobile screen and center card in middle for desktop

--- a/css/main.css
+++ b/css/main.css
@@ -71,14 +71,11 @@ img:hover {
 }
 
 h1 {
-    display: inline;
     font-size: 2.5rem;
     white-space: nowrap;
-    margin: 0.5rem 0rem 0.5rem 0rem;
 }
 
 .section1 {
-    display: inline;
     justify-content: space-evenly;
     font-size: 2rem;
 }
@@ -91,7 +88,6 @@ h1 {
   border-radius: 1rem;
   padding: 0.5rem 1.5rem 1.5rem 1.5rem;
   width: 100%;
-  margin-right: 20rem;
 }
 
 .card p {
@@ -184,30 +180,25 @@ h1 {
 @media screen and (min-width: 1024px) {
 
 h1 {
-    margin-top: 1.5rem;
-    margin-left: 2.5rem;
-    margin-bottom: 0;
+    margin-top: 0;
     font-size: 4.5rem;
     white-space: nowrap;
 }
 
 .section1 {
     display: flex;
-    align-items: center;
-    flex-direction: row;
-    justify-content: space-evenly;
-    font-size: 2.5rem;
+    flex-direction: column;
+    align-items: center; /* Center horizontally */
+    justify-content: center; /* Center vertically */
+    font-size: 2rem;
     white-space: nowrap;
 }
 
 .card {
-    background-color: #f8f8f8;
-    border: 2px solid black;
-    border-radius: 1rem;
+    margin-top: 0;
     padding: 1.5rem 2.5rem 3rem 2.5rem;
     max-width: 600px;
     max-height: 800px;
-    margin-top: 0;
   }
 
   .section2 {
